--- a/index.html
+++ b/index.html
@@ -46,11 +46,9 @@
 <body>
 	<main>
 		<article class="chart-component">
-			<header class="chart-header">
-				<div>
-					<h1>My balance</h1>
-					<p class="amount">$921.48</p>
-				</div>
+			<header class="chart-header top-bottom-layout">
+				<h1>My balance</h1>
+				<p class="amount">$921.48</p>
 				<img class="logo"
 						 src="/images/logo.svg"
 						 alt="">
@@ -62,7 +60,9 @@
 					<canvas id="expenses-chart"></canvas>
 				</div>
 
-				<footer class="chart-footer">
+				<hr class="delimiter">
+
+				<footer class="chart-footer top-bottom-layout">
 					<p>Total this month</p>
 					<p class="total">$478.33</p>
 					<div class="result">
