vite config deploy

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 				content="width=device-width, initial-scale=1.0">
 	<title>FEM | Expenses chart component</title>
 	<meta name="description"
-				content="XXX-XXX-XXX">
+				content="Responsive chart component using Chart.js library, no media queries">
 	<!-- Open Graph / Facebook -->
 	<meta property="og:title"
-				content="FEM | Intro component with sign-up form">
+				content="FEM | Expenses chart component">
 	<meta property="og:description"
-				content="XXX-XXX-XXX">
+				content="Responsive chart component using Chart.js library, no media queries">
 	<meta property="og:type"
 				content="website">
 	<meta property="og:url"
-				content="https://nazhdaque.github.io/expenses-chart-component/">
+				content="https://nazhdaque.github.io/fem-expenses-chart-component/">
 	<meta property="og:image"
 				content="./images/preview.jpg">
 	<meta property="og:image:width"
@@ -29,11 +29,11 @@
 	<meta name="twitter:card"
 				content="summary_large_image">
 	<meta name="twitter:title"
-				content="FEM | Intro component with sign-up form">
+				content="FEM | Expenses chart component">
 	<meta name="twitter:description"
-				content="XXX-XXX-XXX">
+				content="Responsive chart component using Chart.js library, no media queries">
 	<meta name="twitter:url"
-				content="https://nazhdaque.github.io/expenses-chart-component/">
+				content="https://nazhdaque.github.io/fem-expenses-chart-component/">
 	<meta name="twitter:image"
 				content="./images/preview.jpg">
 
